2004-04-24  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Start the changes thread *after* all covers have been loaded,
	to reduce the amount of disc seeking on startup.

2004-04-22  Jorn Baayen  <jbaayen@gnome.org>

	* src/FileUtils.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Split out filename peeking utilities to a separate class.

2004-04-21  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Support for removable media in /media, like on SuSE.

2004-04-21  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Call NSongsChanged in HandleRemovePlayedSongsCommand

2004-04-20  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/ErrorDialog.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Prettier error dialogs.

2004-04-20  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* libmuine/player-gst.c: (player_init), (player_construct),
	(player_new), (player_set_file), (player_get_volume):
	* libmuine/player-xine.c: (player_construct), (player_new),
	(player_open), (player_set_file):
	* libmuine/player.h:
	* po/POTFILES.in:
	* po/POTFILES.skip:
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Much improved error handling.

2004-04-19  Jorn Baayen  <jbaayen@gnome.org>

	* src/ColoredCellRendererPixbuf.cs:

	Simplify.

2004-04-18  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:

	Change "Skip to" shortcut from Ctrl-T to T.

2004-04-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/muine.in:

	Add a "cd $HOME" to avoid the "loading libmuine/ as the libmuine dll"
	bug. Lee's idea ..

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/Makefile.am:
	A data/images/muine-about.png:
	* src/About.cs:
	* src/Makefile.am:

	Use new logo by Andreas Kwiatkowski (kwiatkowski@typorism.com) in
	the about box.

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Require mono 0.31.

2004-04-17  Jorn Baayen  <jbaayen@gnome.org>
