@@ -1,3 +1,9 @@
+2004-04-25  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/Player.cs:
+
+	Make seek reload the stream when it has been stopped.
+
 2004-04-24  Jorn Baayen  <jbaayen@gnome.org>
 
 	* src/Muine.cs:
